--- a/pruebasPhaser/package.json
+++ b/pruebasPhaser/package.json
@@ -25,7 +25,8 @@
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
-		"phaser": "^3.55.2"
+		"phaser": "^3.55.2",
+		"socket.io-client": "^4.7.4"
 	},
 	"parcelCleanPaths": [
 		"dist"
