--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  laravel-app:
+  chromatic-laravel:
     build:
       context: ./back/laravel
       dockerfile: ./DockerFile
-    container_name: laravel
+    container_name: chromatic-laravel
     working_dir: /var/www
     volumes:
       - ./back/laravel:/var/www
@@ -20,26 +20,25 @@ services:
     depends_on:
       - db
 
-  nuxt-app:
+  chromatic-nextjs:
     image: node:18-bullseye
-    container_name: nuxt
+    container_name: chromatic-nextjs
     working_dir: /app
     volumes:
-      - ./front/cine-app:/app
+      - ./front/next:/app
     ports:
       - "3000:3000"
     environment:
-      - WATCHPACK_POLLING=true
-      - CHOKIDAR_USEPOLLING=true
+      - NODE_ENV=development
     command: bash -c "npm install && npm run dev"
     links:
-      - nodesocket-app
+      - nodesocket
 
-  nodesocket-app:
+  chromatic-nodesocket:
     build:
       dockerfile: ./DockerFile
       context: ./node
-    container_name: nodesocket
+    container_name: chromatic-nodesocket
     volumes:
       - ./node:/app
     working_dir: /app
@@ -49,7 +48,7 @@ services:
     ports:
       - "3727:3727"
 
-  db:
+  chromatic-db:
     image: mysql:latest
     container_name: mysql_db
     volumes:
@@ -60,9 +59,9 @@ services:
     ports:
       - "3306:3306"
 
-  phpmyadmin:
+  chromatic-phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
+    container_name: chromatic-phpmyadmin
     environment:
       PMA_HOST: db
       PMA_PORT: 3306
