--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,44 @@
 version: '3.8'
 
 services:
-  chromatic-laravel:
-    build:
-      context: ./back/laravel
-      dockerfile: ./DockerFile
-    container_name: chromatic-laravel
-    working_dir: /var/www
-    volumes:
-      - ./back/laravel:/var/www
-    command: >
-      bash -c "composer update
-      && cp .env.example .env
-      && php artisan key:generate
-      && php artisan migrate
-      && php artisan serve --host=0.0.0.0 --port=8000"
-    ports:
-      - "8000:8000"
-    depends_on:
-      - chromatic-db
+  # chromatic-laravel:
+  #   build:
+  #     context: ./back/laravel
+  #     dockerfile: ./DockerFile
+  #   container_name: chromatic-laravel
+  #   working_dir: /var/www
+  #   volumes:
+  #     - ./back/laravel:/var/www
+  #   command: >
+  #     bash -c "composer update
+  #     && cp .env.example .env
+  #     && php artisan key:generate
+  #     && php artisan migrate
+  #     && php artisan serve --host=0.0.0.0 --port=8000"
+  #   ports:
+  #     - "8000:8000"
+  #   depends_on:
+  #     - chromatic-db
 
-  nuxt-app:
+  chromatic-nextjs:
     image: node:18-bullseye
-    container_name: nuxt
+    container_name: chromatic-nextjs
     working_dir: /app
     volumes:
-      - ./front/cine-app:/app
+      - ./front/next:/app
     ports:
       - "3000:3000"
     environment:
-      - WATCHPACK_POLLING=true
-      - CHOKIDAR_USEPOLLING=true
+      - NODE_ENV=development
     command: bash -c "npm install && npm run dev"
     links:
-      - nodesocket-app
+      - chromatic-nodesocket
 
-  nodesocket-app:
+  chromatic-nodesocket:
     build:
       dockerfile: ./DockerFile
       context: ./node
-    container_name: nodesocket
+    container_name: chromatic-nodesocket
     volumes:
       - ./node:/app
     working_dir: /app
@@ -49,31 +48,29 @@ services:
     ports:
       - "3727:3727"
 
-  chromatic-db:
-    image: mysql:latest
-    container_name: chromatic-mysql_db
-    volumes:
-      - db-data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-    ports:
-      - "3306:3306"
+  # chromatic-db:
+  #   image: mysql:latest
+  #   container_name: chromatic-mysql_db
+  #   volumes:
+  #     - db-data:/var/lib/mysql
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: root
+  #     MYSQL_DATABASE: laravel
+  #   ports:
+  #     - "3306:3306"
 
-  chromatic-phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: chromatic-phpmyadmin
-    environment:
-      PMA_HOST: chromatic-db
-      PMA_PORT: 3306
-      PMA_USER: root
-      PMA_PASSWORD: root
-    ports:
-      - "8080:80"
-    depends_on:
-      - chromatic-db
+  # chromatic-phpmyadmin:
+  #   image: phpmyadmin/phpmyadmin
+  #   container_name: chromatic-phpmyadmin
+  #   environment:
+  #     PMA_HOST: chromatic-db
+  #     PMA_PORT: 3306
+  #     PMA_USER: root
+  #     PMA_PASSWORD: root
+  #   ports:
+  #     - "8080:80"
+  #   depends_on:
+  #     - chromatic-db
 
 volumes:
   db-data:
-
-  
