--- a/front/next/package.json
+++ b/front/next/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.7.5",
     "typescript": "5.2.2",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
