--- a/front/next/package.json
+++ b/front/next/package.json
@@ -17,6 +17,7 @@
     "phaser": "3.51",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
     "socket.io-client": "^4.7.5",
     "typescript": "5.2.2",
