--- a/front/next/package.json
+++ b/front/next/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
+    "axios": "^1.6.8",
     "clsx": "^2.0.0",
     "next": "^14.0.2",
     "next-auth": "^4.24.7",
