--- a/front/next/package.json
+++ b/front/next/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
+    "react-tooltip": "^5.26.4",
     "socket.io-client": "^4.7.5",
     "typescript": "5.2.2",
     "zod": "^3.22.2",
