Update package name, environment variables, and default user image path

--- a/back/laravel/.env.dev
+++ b/back/laravel/.env.dev
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:yJHBg8g80bJd9AobLnVZ5N9tF8PMoSQDsFrGnFBSPJE=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=chromatic-db
 DB_PORT=3306
-DB_DATABASE=tr-final
+DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
