--- a/back/laravel/.env.prod
+++ b/back/laravel/.env.prod
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=chromaticbond-db-do-user-15835176-0.c.db.ondigitalocean.com
+DB_HOST=
 DB_PORT=25060
 DB_DATABASE=laravel
-DB_USERNAME=doadmin
-DB_PASSWORD=AVNS_4z5MXiOTV9HNsD4r3e8
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
